# qiang

./: .env  README.md  pyproject.toml
output/: table_relations.gpickle
src/shop/: __init__.py  agentscope_sql_agents.py  debug_keywords.py  generate_knowledge_vectors.py  generate_table_excel.py  main.py  main_new.py  mysqlClient.py  pipeline.py  pyMysqlClient.py  run_sql_agent.py  table_config.py  utils.py  webapp.py
src/shop/agents/: __init__.py  base.py  data_converter_agent.py  data_transform_agent.py  query_parser_agent.py  sql_executor_agent.py  sql_generator_agent.py  sql_validator_agent.py  workflow_retriever_agent.py
src/shop/dbConfig/: __init__.py  dbBuilder.py
src/shop/knowledge/: keywords.json  keywords_table.json  merged_knowledge.json  relations.xlsx  remark.json  table_descriptions.xlsx  table_descriptions_optimized.xlsx  table_hierarchy_config.yaml  table_info.json  table_structures.xlsx  table_workflow_config.yaml  workflow_by_name.json  workflow_by_name.yaml  workflow_list.json
src/shop/output/: result_task1_20260408_105214.html  result_task1_20260408_114116.html  result_task1_20260408_115251.html  result_task1_20260408_140125.html
src/shop/skills/: __init__.py  table_structure_skill.py  workflow_table_skill.py
src/shop/templates/: index.html
src/shop/tools/: template_tools.py  tools.py
